Set bg image on main section, pull color pallet from image and apply bg colors to the rest of the layout. Fix spacing issue

--- a/style.css
+++ b/style.css
@@ -50,6 +50,18 @@ table {
 
 /*__________________________________________*/
 
+:root {
+    /* Color pallet pulled from background image*/
+    /* CSS HSL */
+--viridian: hsla(155, 27%, 43%, 1);
+--brunswick-green: hsla(174, 66%, 19%, 1);
+--brunswick-green-2: hsla(175, 66%, 14%, 1);
+--rich-black: hsla(187, 94%, 7%, 1);
+--mint: hsla(155, 37%, 58%, 1);
+
+--mint-light: hsla(155, 37%, 98%, 1);
+--viridian-light: hsla(155, 27%, 60%, 1);
+}
 
 * {
     margin: 0;
@@ -65,7 +77,7 @@ html {
 }
 
 div {
-    border: 1px solid gray;
+    border: 1px solid black;
 }
 
 .container {
@@ -83,7 +95,7 @@ div {
 
 .header {
     grid-column: 2 / 3;
-    background-color:rgba(0, 255, 170, 0.3);
+    background-color: var(--mint-light);
     display: grid;
     grid-template-rows: 1fr 2fr;
 }
@@ -137,7 +149,7 @@ div {
 
 .sidebar {
     grid-row: 1 / 3;
-    background-color: rgb(0, 0, 255, 0.2);
+    background-color: var(--mint);
     display: flex;
     flex-direction: column;
     gap: 60px;
@@ -166,14 +178,20 @@ div {
 }
 
 .main {
-    background-color: rgb(255, 192, 203, 0.4);
+    background-image: url('img/bg1-leaves.png');
     display: grid;
-    grid-template: 50px 240px 50px 270px 1fr / 1fr 200px;
+    grid-template: 60px 240px 60px 270px 1fr / 1fr 200px;
 }
 
 h3 {
-    align-self: center;
+    align-self: self-end;
+    padding: 10px;
     font-weight: 700;
+    color: var(--mint-light);
+}
+
+.projects-header {
+    margin-left: 20px;
 }
 
 .projects {
@@ -181,7 +199,7 @@ h3 {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
     grid-template-rows: repeat(3, 1fr);
-    padding: 20px;
+    padding: 0px 20px 20px 20px;
     gap: 20px;
 }
 
@@ -190,6 +208,7 @@ h3 {
     flex-direction: column;
     padding: 15px;
     min-height: 200px;
+    background-color: var(--mint-light);
 }
 
 .card > h5 {
@@ -211,6 +230,7 @@ h3 {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    background-color: var(--mint-light);
 }
 
 .a > h6 {
@@ -228,6 +248,7 @@ h3 {
     display: grid;
     grid-template: repeat(4, 1fr) / 80px 1fr;
     align-items: center;
+    background-color: var(--mint-light);
 }
 
 .trending .icon {
@@ -240,7 +261,9 @@ h3 {
 
 .footer {
     grid-column: 1 / 3;
-    background-color: rgba(150, 63, 185, 0.5);
+    background-color: var(--brunswick-green);
+    color: var(--mint-light);
+    font-weight: 700;
     display: flex;
     justify-content: center;
     align-items: center;
